recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:4: error: missing arguments for method spiral in class Spiral;
follow this method with `_' if you want to treat it as a partially applied function
  spiral
  ^